linux (3.8.13-3) unstable; urgency=medium

  * Modify upstream package to build i-pipe RT kernels for x86
    - Starting from Debian Sid kernel package sources, SVN r20131
  * Trim down to x86 arch, vanilla kernel only
    - Remove non-x86 configs and installer files
    - Remove most Debian patches
    - Remove 'rt' featureset
  * Import kernel configs from Ubuntu Raring 3.8.13 packages [1]
    - Sid configs @20131 had problems, esp. missing virtio drivers
    - http://kernel.ubuntu.com/~kernel-ppa/mainline/v3.8.13.23-raring
  * Set ABI name to '1mk' for Machinekit
  * Add r8168 NIC driver
  * Fixes
    - require kernel-wedge >= 2.82 (was 2.84) to build on precise

 -- John Morris <john@zultron.com>  Sat, 17 May 2014 23:20:59 +0200


linux (3.8.13-2) UNRELEASED; urgency=low

  * udeb: Fix yet more configuration errors causing FTBFS:
    - [powerpcspe] Add llc to nic-shared-modules (Closes: #708662)
    - [powerpc/powerpc64] Replace ibmvscsic with ibmvscsi in scsi-modules
    - [ppc64] Use symlinks to follow powerpc/powerpc64 configuration

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 19 May 2013 00:26:48 +0100

linux (3.8.13-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.8.13
    - autofs - remove autofs dentry mount check
    - hugetlbfs: fix mmap failure in unaligned size request
      (fixes regression in 3.4)
    - perf/x86/intel/lbr: Fix LBR filter
    - perf/x86/intel/lbr: Demand proper privileges for PERF_SAMPLE_BRANCH_KERNEL
    - ipvs: ip_vs_sip_fill_param() BUG: bad check of return value
    - netfilter: ctnetlink: don't permit ct creation with random tuple
    - ext4: add check for inodes_count overflow in new resize ioctl
    - r8169: fix 8168evl frame padding.
    - drm/prime: keep a reference from the handle to exported dma-buf (v6)
    - Btrfs: compare relevant parts of delayed tree refs
    - Btrfs: fix extent logging with O_DIRECT into prealloc