@@ -1,6 +1,6 @@
 [base]
 featuresets:
- none
+# none
 flavours:
  amd64
 kernel-arch: x86
