@@ -11,7 +11,7 @@ arches:
 # Needed by Precise; Wheezy has gcc-4.7
 compiler: gcc-4.6
 featuresets:
- none
+# none
 
 [description]
 part-long-up: This kernel is not suitable for SMP (multi-processor,
