@@ -17,6 +17,7 @@ class Makefile(object):
     def __init__(self):
         self.rules = {}
         self.add('.NOTPARALLEL')
+        self.includes = set()
 
     def add(self, name, deps=None, cmds=None):
         if name in self.rules:
@@ -28,7 +29,12 @@ class Makefile(object):
                 if i not in self.rules:
                     self.rules[i] = self.Rule(i)
 
+    def include(self, name):
+        self.includes.add(name)
+
     def write(self, out):
+        for include in self.includes:
+            out.write('include %s\n' % include)
         r = self.rules.keys()
         r.sort()
         for i in r:
@@ -154,7 +160,13 @@ class Gencontrol(object):
 
         self.do_arch_setup(vars, makeflags, arch, extra)
         self.do_arch_makefile(makefile, arch, makeflags, extra)
-        self.do_arch_packages(packages, makefile, arch, vars, makeflags, extra)
+        if 'none' not in self.config[('base',arch,)]:
+            import warnings
+            warnings.warn(u'No "none" featureset defined; '
+                          u'disabling udeb, header and libc-dev builds')
+        else:
+            self.do_arch_packages(packages, makefile, arch, vars, makeflags,
+                                  extra)
         self.do_arch_recurse(packages, makefile, arch, vars, makeflags, extra)
 
     def do_arch_setup(self, vars, makeflags, arch, extra):
